added changes to admin and back

--- a/admin/src/app/components/login/login.component.html
+++ b/admin/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
                                     <div class="form-group">
                                         <label class="form-label">Password</label>
                                         <div class="controls">
-                                            <input formControlName="password"type="text" class="form-control" name="formfield1" placeholder="password">
+                                            <input formControlName="password"type="password" class="form-control" name="formfield1" placeholder="password">
                                         </div>
                                     </div>
 
