--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -13,6 +13,23 @@
                     <span class="title">Dashboard</span>
                 </a>
             </li>
+            <li class="">
+                <a href="javascript:;">
+                    <i class="img">
+                        <img src="assets/icons/45952.png" alt="" class="width-20">
+                    </i>
+                    <span class="title">Medical Fields</span>
+                    <span class="arrow "></span>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a class="" routerLink="/home/domainList">All Medical fields</a>
+                    </li>
+                    <li>
+                        <a class="" routerLink="/home/addDomain">Add Medical field</a>
+                    </li>
+                </ul>
+            </li>
             
             
             <li class="">
