--- a/admin/src/app/components/layout/layout.component.html
+++ b/admin/src/app/components/layout/layout.component.html
@@ -392,9 +392,9 @@
                         <a class="box_close fa fa-times"></a>
                     </div>
                 </header>
-                <div class="content-body">    
+                <div class="content-body" *ngIf="ratings">    
                     <div class="row"  >
-                        <div class="col-xs-12" *ngFor="let rate of ratings.slice(0,4)">
+                        <div class="col-xs-12"  *ngFor="let rate of ratings.slice(0,4)">
                             <ul class="project-activity list-unstyled mb-0">
                                 <li class="activity-list warning">
                                     <div class="detail-info">
