--- a/admin/src/app/components/community-posts/community-posts.component.html
+++ b/admin/src/app/components/community-posts/community-posts.component.html
@@ -5,7 +5,7 @@
   padding: 20px;
   margin-bottom: 20px;
   display: flex;
-  height: 500px;
+  height: auto;
 }
 
 .post-image {
@@ -73,6 +73,15 @@
 .decline-button:hover{
     background-color: darkred;
 }
+.canvascontainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+
 
 </style>
 <section id="main-content" class=" ">
@@ -86,13 +95,27 @@
                     <h1 class="title">Posts Requests</h1>
                     <!-- PAGE HEADING TAG - END -->
                 </div>
+                <div>
+                  
+                  
+                  
+                </div>
+                
+                
+
 
             </div>
         </div>
 
         <div class="clearfix"></div>
         <!-- MAIN CONTENT AREA STARTS -->
+        <div class="canvascontainer">
+          <p style="font-family: cursive;font-weight: bold; font-size: 50px;margin-bottom: 30px;">Comments reviews Chart</p>
+          <canvas id="myChart" width="50" height="20"></canvas>
+        </div>
+        
 
+        <p style="font-family: cursive;font-weight: bold; font-size: 50px;margin-bottom: 30px;margin-left: 50%;margin-top: 30px;margin-bottom: 30px;">All posts</p>
         <div class="col-lg-4 col-md-6" *ngFor="let post of posts |paginate:{itemsPerPage:3,currentPage:p}">
             <section class="box ">
                 <div class="content-body p">
@@ -100,24 +123,29 @@
                         <div class="post-box" >
                             
                             <div class="post-content">
-                              <div class="post-author">{{post.author.username}}</div>
+                              <div class="post-author">{{post.author.username}} </div>
                               <div class="post-image">
                                 <img src="http://127.0.0.1:8088/api/auth/Doctor/files/{{post.photo}}" alt="Post Image">
                               </div>
+                              
                               <div class="post-title">{{post.title}}</div>
                               <div class="post-description">{{post.description}}</div>
                               <div class="button-container">
                                 <button class="accept-button" *ngIf="post.accepted==false" (click)="acceptPost(post.id)">Accept</button>
-                                <h3 *ngIf="post.accepted==true" style="text-shadow: #ccc;color: darkgreen;">Accepted</h3>
-                                
-                                
+                                <h3 *ngIf="post.accepted==true" style="text-shadow: #ccc;color: darkgreen;margin-left: 30%;">Accepted</h3>
                               </div>
+                              
+                              
                             </div>
+                            
                           </div>
                           
                     </div>
+                    
                 </div>
+                
             </section>
+            
         </div>
 
         
@@ -138,6 +166,7 @@
         <!-- MAIN CONTENT AREA ENDS -->
     </div>
     <pagination-controls (pageChange)="p=$event"></pagination-controls>
+    
 </section>
 <!-- END CONTENT -->
 
