--- a/users/src/app/components/login/login.component.html
+++ b/users/src/app/components/login/login.component.html
@@ -125,6 +125,7 @@
 
 
         <a routerLink="/login" class="switch-link">Don't have an account ?</a>
+		<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
 	</form>
 </body>
 </html>
