--- a/users/src/app/components/my-patients/my-patients.component.html
+++ b/users/src/app/components/my-patients/my-patients.component.html
@@ -244,7 +244,7 @@
               </div>
             </div>
           </div>
-          <div *ngIf="files.length === 0">
+          <div *ngIf="files?.length===0">
             <button style="width:10%;margin-left: 90%;background-color: red;border: none;font-weight: bold;color: white;" (click)="closeMessageModal()">close</button>
             <h2 style="color: #ff5757; font-size: 28px; margin-top: 40px; text-align: center;">Oops! No medical files found for this patient.</h2>
             <p style="font-size: 16px; text-align: center; margin-top: 20px;">Create a new medical file for this patient and check again.</p>
